Use env instead of set output

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,13 +40,6 @@ jobs:
       - name: Run TFLint
         run: tflint -f compact
 
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Test
-        run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
-
       - name: Get latest release version
         id: get-release
         run: |
@@ -54,16 +47,16 @@ jobs:
           response=$(curl -sS --header "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
                      "https://api.github.com/repos/${{ github.repository }}/releases/latest")
           # Extract the "tag_name" field from the response using jq
-          version=$(echo "$response" | jq -r '.tag_name')
+          release_version=$(echo "$response" | jq -r '.tag_name')
 
-          # Set the output "version" to make it accessible to other steps
-          echo "::set-output name=latest_version::$version"
+          # Store the latest release version as an output variable
+          echo "RELEASE_VERSION=${release_version}" >> $GITHUB_ENV
 
       - name: Increment version
         id: increment-version
         run: |
           # Extract major, minor, and patch components from the version
-          IFS='.' read -ra version_parts <<< "${{ steps.get-release.outputs.version }}"
+          IFS='.' read -ra version_parts <<< "${{ env.RELEASE_VERSION }}"
           major=${version_parts[0]}
           minor=${version_parts[1]}
           patch=${version_parts[2]}
@@ -74,13 +67,13 @@ jobs:
           # Construct the new version
           new_version="${major}.${minor}.${patch}"
 
-          # Set the output "new_version" to make it accessible to other steps
-          echo "::set-output name=new_version::$new_version"
+          # Store the incremented version as an output variable
+          echo "NEW_VERSION=${new_version}" >> $GITHUB_ENV
 
       - name: Display latest release version and incremented version
         run: |
-          echo "Latest release version: ${{ steps.get-release.outputs.version }}"
-          echo "Incremented version: ${{ steps.increment-version.outputs.new_version }}"
+          echo "Latest release version: ${{ env.RELEASE_VERSION }}"
+          echo "Incremented version: ${{ env.NEW_VERSION }}"
 
       - name: Create Release
         id: create_release
