--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,10 @@ jobs:
         run: warp-cli --accept-tos account
       - name: Connect to Cloudflare Warp Client
         run: warp-cli --accept-tos connect
+      - name: Check Cloudflare Warp Files
+        run: |
+          ls -la /etc/cloudflare-warp
+          ls -la /etc/wireguard
       - name: Test connection
         run: ping 172.16.1.1
       # - name: HashiCorp - Setup Terraform
