--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,6 +42,8 @@ jobs:
       #   run: |
       #     warp-cli --accept-tos teams-enroll prashant-home
       #     sleep 15
+      - name: Delete WARP
+        run: warp-cli --accept-tos delete
       - name: Register WARP
         run: warp-cli --accept-tos register
       - name: Check Cloudflare Warp Client Status
