--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,13 @@ jobs:
             <string>CF-Access-Client-Id: 44c91d4c7724a9bc41d03af442f1b54b.access</string>
             <key>auth_client_secret</key>
             <string>CF-Access-Client-Secret: 53aa6848e7db406ebd474308260f05ec71d3ee4508666fc50e6a1d36e064c47a</string>
-          </dict>
+            <key>switch_locked</key>
+            <boolean>true</boolean>
+            <key>onboarding</key>
+            <boolean>false</boolean>
+            <key>auto_connect</key>
+            <integer>0</integer>
+            </dict>
           EOF'
       # - name: Configure Cloudflare Warp Client
       #   run: |
@@ -51,7 +57,7 @@ jobs:
       - name: Connect to Cloudflare Warp Client
         run: warp-cli --accept-tos connect
       - name: Test connection
-        run: ping 172.16.1.1
+        run: ping -c 2 172.16.1.1
       # - name: HashiCorp - Setup Terraform
       #   uses: hashicorp/setup-terraform@v2.0.3
         
