--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 name: Test
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  # push:
+  #   branches: [ "main" ]
+  # pull_request:
+  #   branches: [ "main" ]
 
   workflow_dispatch:
 
@@ -57,7 +57,7 @@ jobs:
       - name: Connect to Cloudflare Warp Client
         run: warp-cli --accept-tos connect
       - name: Test connection
-        run: ping -c 2 172.16.1.10
+        run: ping -c 2 172.16.1.50
       # - name: HashiCorp - Setup Terraform
       #   uses: hashicorp/setup-terraform@v2.0.3
         
