--- a/.github/workflows/test-tailscale.yml
+++ b/.github/workflows/test-tailscale.yml
@@ -37,4 +37,5 @@ jobs:
       
       - name: TEST SSH
         run: |
+          ssh-keyscan 100.96.246.24 >> ~/.ssh/known_hosts
           ssh -t -T root@100.96.246.24
