--- a/.github/workflows/test-tailscale.yml
+++ b/.github/workflows/test-tailscale.yml
@@ -37,7 +37,7 @@ jobs:
       
       - name: TEST SSH
         run: |
-          mkdir ~/.ssh
-          touch ~/.ssh/known_hosts
-          ssh-keyscan 100.96.246.24 >> ~/.ssh/known_hosts
-          ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null root@100.96.246.24 "echo 'hello world'"
+          # mkdir ~/.ssh
+          # touch ~/.ssh/known_hosts
+          # ssh-keyscan 100.115.166.129 >> ~/.ssh/known_hosts
+          ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null root@100.115.166.129 "echo 'hello world'"
