--- a/.github/workflows/test-tailscale.yml
+++ b/.github/workflows/test-tailscale.yml
@@ -40,4 +40,4 @@ jobs:
           # mkdir ~/.ssh
           # touch ~/.ssh/known_hosts
           # ssh-keyscan 100.115.166.129 >> ~/.ssh/known_hosts
-          ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null root@100.115.166.129 "echo 'hello world'"
+          ssh -vvv -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null root@100.115.166.129 "echo 'hello world'"
