--- a/.github/workflows/test-tailscale.yml
+++ b/.github/workflows/test-tailscale.yml
@@ -18,9 +18,9 @@ jobs:
       - name: Install tailscale
         run: |
           #!/bin/bash
-          sudo mkdir ~/.ssh
-          sudo touch ~/.ssh/known_hosts
-          sudo ssh-keygen -t rsa -q -f "~/.ssh/id_rsa" -N ""
+          sudo mkdir /home/runner/.ssh
+          sudo touch /home/runner/.ssh/known_hosts
+          sudo ssh-keygen -t rsa -q -f "/home/runner/.ssh/id_rsa" -N ""
           # Add the Tailscale GPG key
           curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/focal.gpg | sudo apt-key add -
 
