--- a/.github/workflows/test-tailscale.yml
+++ b/.github/workflows/test-tailscale.yml
@@ -35,9 +35,9 @@ jobs:
           sudo tailscale up --authkey tskey-auth-kCBADm3CNTRL-m8YrdS2SmPjxviLzzwB6Pjr2RLLuhJV3
   
       - name: Test connection
-        run: ping -c 2 100.96.246.24
+        run: ping -c 2 datahoarder
       
       - name: TEST SSH
         run: |
-          ssh-keyscan 100.115.166.129 >> ~/.ssh/known_hosts
-          ssh -vvv -o StrictHostKeyChecking=no root@100.115.166.129 "echo 'hello world'"
+          ssh-keyscan compute >> ~/.ssh/known_hosts
+          ssh -vvv -o StrictHostKeyChecking=no root@compute "echo 'hello world'"
