--- a/.github/workflows/test-tailscale.yml
+++ b/.github/workflows/test-tailscale.yml
@@ -15,25 +15,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Install tailscale
-        run: |
-          #!/bin/bash
-          mkdir /home/runner/.ssh
-          touch /home/runner/.ssh/known_hosts
-          ssh-keygen -t rsa -q -f "/home/runner/.ssh/id_rsa" -N ""
-          # Add the Tailscale GPG key
-          curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/focal.gpg | sudo apt-key add -
+      - uses: prashantsolanki3/actions/.github/workflows/setup-tailscale.yml@main
+        with:
+          authkey: tskey-auth-kCBADm3CNTRL-m8YrdS2SmPjxviLzzwB6Pjr2RLLuhJV3
 
-          # Add the Tailscale repository
-          curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/focal.list | sudo tee /etc/apt/sources.list.d/tailscale.list
-          
-          # Update package list and install Tailscale
-          sudo apt update
-          sudo apt install -y tailscale
-          
-          # Authenticate and bring up Tailscale
-          sudo tailscale up --authkey tskey-auth-kCBADm3CNTRL-m8YrdS2SmPjxviLzzwB6Pjr2RLLuhJV3
-  
       - name: Test connection
         run: ping -c 2 datahoarder
       
