--- a/.github/workflows/test-tailscale.yml
+++ b/.github/workflows/test-tailscale.yml
@@ -9,15 +9,17 @@ on:
   workflow_dispatch:
 
 jobs:
+  tailscale:  
+    uses: prashantsolanki3/actions/.github/workflows/setup-tailscale.yml@main
+    with:
+      authkey: tskey-auth-kCBADm3CNTRL-m8YrdS2SmPjxviLzzwB6Pjr2RLLuhJV3
+
   build:
     runs-on: ubuntu-latest
     # runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v3
-      - uses: prashantsolanki3/actions/.github/workflows/setup-tailscale.yml@main
-        with:
-          authkey: tskey-auth-kCBADm3CNTRL-m8YrdS2SmPjxviLzzwB6Pjr2RLLuhJV3
 
       - name: Test connection
         run: ping -c 2 datahoarder
