--- a/.github/workflows/test-tailscale.yml
+++ b/.github/workflows/test-tailscale.yml
@@ -15,6 +15,7 @@ jobs:
       authkey: tskey-auth-kCBADm3CNTRL-m8YrdS2SmPjxviLzzwB6Pjr2RLLuhJV3
 
   build:
+    needs: [tailscale]
     runs-on: ubuntu-latest
     # runs-on: self-hosted
 
