--- a/.github/workflows/test-tailscale.yml
+++ b/.github/workflows/test-tailscale.yml
@@ -25,4 +25,4 @@ jobs:
       - name: TEST SSH
         run: |
           ssh-keyscan compute >> ~/.ssh/known_hosts
-          ssh -vvv -o StrictHostKeyChecking=no root@compute "echo 'hello world'"
+          ssh -vvv root@compute "echo 'hello world'"
