--- a/.github/workflows/test-tailscale.yml
+++ b/.github/workflows/test-tailscale.yml
@@ -11,11 +11,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@v3
-      - uses: prashantsolanki3/actions@main
+      - uses: prashantsolanki3/actions@tailscale
         with:
           authkey: tskey-auth-kCBADm3CNTRL-m8YrdS2SmPjxviLzzwB6Pjr2RLLuhJV3
 
@@ -25,4 +24,4 @@ jobs:
       - name: TEST SSH
         run: |
           ssh-keyscan compute >> ~/.ssh/known_hosts
-          ssh -vvv root@compute "echo 'hello world'"
+          ssh root@compute "echo 'hello world'"
