--- a/.github/workflows/test-tailscale.yml
+++ b/.github/workflows/test-tailscale.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: prashantsolanki3/composite-actions@tailscale
         with:
-          authkey: tskey-auth-kCBADm3CNTRL-m8YrdS2SmPjxviLzzwB6Pjr2RLLuhJV3
+          authkey: ${{ secrets.TAILSCALE_AUTHKEY }}
 
       - name: Test connection
         run: ping -c 2 datahoarder
